# Rocket

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  log.txt
socket-client/: .rustfmt.toml  Cargo.toml
socket-client/src/: clientsocket.rs  main.rs  testclient.rs  utils.rs
socket-io-control/: run.py  run.sh
socket-io-control/client/: index.js  package-lock.json  package.json
socket-io-control/server/: index.js  package-lock.json  package.json
socket-server/: Cargo.toml
socket-server/src/: main.rs
socket-server/src/client/: clientsocket.rs  mod.rs
socket-server/src/data_structures/mpmc_queue/: mpmc_queue.rs
socket-server/src/run/: run.rs
socket-server/src/server/: concurrent.rs  connectedclient.rs  mod.rs
socket-server/src/test/: times.txt
socket-server/src/utils/: logging.rs  mod.rs  utils.rs
src/: main.rs
src/client/: clientsocket.rs
src/run/: mod.rs  run.rs  run_seq.rs  testclient.rs
src/seq/: README.md  client.rs  clientsocket.rs  mod.rs  seq.rs  server.rs  testclient.rs
src/server/: concurrent.rs  connectedclient.rs  mod.rs  out.txt  sequential.rs  server.rs
src/test/: commands.txt  generate_commands.py  run_seq.rs  run_tests.py  testclient.rs
src/utils/: logging.rs  utils.rs
test/: commands.txt  generate_client_commands.py  generate_commands.py  generate_node_client_commands.py  graph.py  last_graph.py  node_commands.txt  run_experiment.py  run_experiment.sh  run_experiments.py  run_experiments.sh  run_node_experiments.py  run_node_experiments.sh  rust_log.txt  test.txt  times.txt
