[package]
name = "socket_server"
authors = ["Pranay Gosar", "Ben Gordon"]
version = "0.1.0"
edition = "2021"


[dependencies]
base64 = "0.21.5"
rand = "0.8.5"
sha1 = "0.10.1"
pollster = "0.3.0"
tokio = {version = "1.34.0", features = ["full"]}
clap = {version = "4.4.8", features = ["derive", "cargo"]}
getset = "0.1.2"
