[package]
name = "socket-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
clap = "4.4.10"
getset = "0.1.2"
rand = "0.8.5"
sha1 = "0.10.6"

tokio = { version = "1.34.0", features = ["full"] }
