[package]
name = "socket-client"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.5"
clap = "4.4.10"
fs2 = "0.4.3"
getset = "0.1.2"
rand = "0.8.5"
sha1 = "0.10.6"
tokio = { version = "1.34.0", features = ["full"] }
tracing = {version = "0.1.40", features = ["max_level_trace", "release_max_level_warn"]}
tracing-subscriber = {version = "0.2.20", features = ["env-filter", "fmt"]}
