[package]
name = "socket_server"
authors = ["Pranay Gosar", "Ben Gordon"]
version = "0.1.0"
edition = "2021"


[dependencies]
base64 = "0.21.5"
rand = "0.8.5"
rand_distr = "0.4.3"
sha1 = "0.10.1"
pollster = "0.3.0"
tokio = {version = "1.34.0", features = ["full"]}
clap = {version = "4.4.8", features = ["derive", "cargo"]}
getset = "0.1.2"
tracing = {version = "0.1.40", features = ["max_level_trace", "release_max_level_warn"]}
tracing-subscriber = {version = "0.2.20", features = ["env-filter", "fmt"]}
